--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
 		<meta name="description" content="Описание">
-		<title>404</title>
+		<title>О нас</title>
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1678217843335">
+		<link rel="stylesheet" href="./css/main.css?v=1678217843689">
 	</head>
 	<body>
 		<!-- Header-->
@@ -103,15 +103,174 @@
 							<use xlink:href="#chevron-right"></use>
 						</svg>
 					</li>
-					<li class="breadcrumb__item"><span class="breadcrumb__current">404 ошибка</span></li>
+					<li class="breadcrumb__item"><span class="breadcrumb__current">О нас</span></li>
 				</ul>
 			</div>
-			<!-- Section 404-->
-			<section class="section-404 container"><img class="section-404__img" src="images/section-404/img-404.svg" alt>
-				<h1 class="section-404__title">404</h1>
-				<p class="section-404__text">Что-то пошло не так! Нужная страница не найдена<br>Вы можете перейти на
-					<a class="section-404__link" href="/">главную страницу</a>
-				</p>
+			<section class="section-about container">
+				<h2 class="h2 text-blue section-about__title">О нас</h2>
+				<!-- Tabs-->
+				<div class="tabs tabs--blue tabs--blue-no-bottom-border">
+					<ul class="tabs__nav-list">
+						<li class="tabs__nav-elem">
+							<button class="tabs__nav-button tabs__nav-button--active" data-content="content1">Общая информация</button>
+						</li>
+						<li class="tabs__nav-elem">
+							<button class="tabs__nav-button" data-content="content2">Управление</button>
+						</li>
+						<li class="tabs__nav-elem">
+							<button class="tabs__nav-button" data-content="content3">История развития</button>
+						</li>
+						<li class="tabs__nav-elem">
+							<button class="tabs__nav-button" data-content="content4">Лицензии и сертификаты</button>
+						</li>
+					</ul>
+					<div class="tabs__content-box">
+						<!-- Content-->
+						<div class="section-about__tab-content tabs__content tabs__content--active" id="content1">
+							<div class="about-people">
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Алексей Пономарев</p>
+										<p class="about-people__job-title">Генеральный менеджер</p>
+									</figcaption>
+								</figure>
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Дмитрий Зубарев</p>
+										<p class="about-people__job-title">Генеральный менеджер</p>
+									</figcaption>
+								</figure>
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Елена Степина</p>
+										<p class="about-people__job-title">Финансовый директор</p>
+									</figcaption>
+								</figure>
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Андрей Стрельников</p>
+										<p class="about-people__job-title">Руководитель отдела технологии</p>
+									</figcaption>
+								</figure>
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Александр Карманов</p>
+										<p class="about-people__job-title">Коммерческий директор</p>
+									</figcaption>
+								</figure>
+								<!-- Card-->
+								<figure class="about-people__card">
+									<div class="about-people__photo-box">
+										<!--img.about-people__photo(src="", alt)-->
+									</div>
+									<figcaption class="about-people__caption-box">
+										<p class="about-people__name">Юрий Павлюк</p>
+										<p class="about-people__job-title">Руководитель отдела продаж</p>
+									</figcaption>
+								</figure>
+							</div>
+						</div>
+						<!-- Content-->
+						<div class="section-about__tab-content tabs__content" id="content2">
+							<ul class="about-download">
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+								<!-- Block-->
+								<li class="about-download__block">
+									<p class="about-download__title">LLC Major Cargo Service</p><a class="about-download__link" href="#" download>Скачать .pdf</a>
+								</li>
+							</ul>
+						</div>
+						<!-- Content-->
+						<div class="section-about__tab-content tabs__content" id="content3">
+							<div class="timeline">
+								<!-- Block-->
+								<div class="timeline__block timeline__block--left">
+									<p class="timeline__year">2011</p>
+									<p class="timeline__title">Образование<br>Major Cargo Service</p>
+									<p class="timeline__text">Это самая главная ценность нашей компании! Для нас наши Клиенты - это наша семья. Успех наших Клиентов - это наш успех, их неудачи - это наши неудачи.</p>
+									<p class="timeline__text">Именно поэтому мы постоянно мониторим нужды наших Клиентов, предлагая новые, максимально эффективные и выгодные решения.</p>
+								</div>
+								<!-- Block-->
+								<div class="timeline__block timeline__block--right timeline__block--image"><img class="timeline__image" src="images/section-about/timeline1.jpg" alt>
+									<p class="timeline__year">2013</p>
+									<p class="timeline__title">Образование<br>Major Cargo Service</p>
+									<p class="timeline__text">Это самая главная ценность нашей компании! Для нас наши Клиенты - это наша семья. Успех наших Клиентов - это наш успех, их неудачи - это наши неудачи. Именно поэтому мы постоянно мониторим нужды наших Клиентов, предлагая новые, максимально эффективные и выгодные решения.</p>
+								</div>
+								<!-- Block-->
+								<div class="timeline__block timeline__block--left timeline__block--image"><img class="timeline__image" src="images/section-about/timeline2.jpg" alt>
+									<p class="timeline__year">2015</p>
+									<p class="timeline__title">Открытие логопарка<br>Major Terminal</p>
+									<p class="timeline__text">Это самая главная ценность нашей компании! Для нас наши Клиенты - это наша семья. Успех наших Клиентов - это наш успех, их неудачи - это наши неудачи. Именно поэтому мы постоянно мониторим нужды наших Клиентов, предлагая новые, максимально эффективные и выгодные решения.</p>
+								</div>
+								<!-- Block-->
+								<div class="timeline__block timeline__block--last timeline__block--fullwidth">
+									<p class="timeline__year">2018</p>
+									<p class="timeline__title">Образование<br>Major Cargo Service</p>
+									<p class="timeline__text">Это самая главная ценность нашей компании! Для нас наши Клиенты - это наша семья. Успех наших Клиентов - это наш успех, их неудачи - это наши неудачи. Именно поэтому мы постоянно мониторим нужды наших Клиентов, предлагая новые, максимально эффективные и выгодные решения.</p>
+								</div>
+							</div>
+						</div>
+						<!-- Content-->
+						<div class="section-about__tab-content tabs__content" id="content4">
+							<div class="about-gallery">
+								<div class="about-gallery__grid">
+									<!-- Col-->
+									<div class="about-gallery__col"><img class="about-gallery__image" src="images/section-about/cert1.jpg" alt><img class="about-gallery__image" src="images/section-about/cert2.jpg" alt><img class="about-gallery__image" src="images/section-about/cert2.jpg" alt></div>
+									<!-- Col-->
+									<div class="about-gallery__col"><img class="about-gallery__image" src="images/section-about/cert3.jpg" alt><img class="about-gallery__image" src="images/section-about/cert3.jpg" alt></div>
+									<!-- Col-->
+									<div class="about-gallery__col"><img class="about-gallery__image" src="images/section-about/cert2.jpg" alt><img class="about-gallery__image" src="images/section-about/cert4.jpg" alt><img class="about-gallery__image" src="images/section-about/cert1.jpg" alt></div>
+									<!-- Col-->
+									<div class="about-gallery__col"><img class="about-gallery__image" src="images/section-about/cert3.jpg" alt><img class="about-gallery__image" src="images/section-about/cert3.jpg" alt></div>
+									<!-- Col-->
+									<div class="about-gallery__col"><img class="about-gallery__image" src="images/section-about/cert2.jpg" alt><img class="about-gallery__image" src="images/section-about/cert5.jpg" alt><img class="about-gallery__image" src="images/section-about/cert1.jpg" alt></div>
+								</div>
+								<div class="about-gallery__button-row">
+									<button class="button button--sm button--outline-blue about-gallery__button">Показать еще</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</section>
 			<!-- Section Invite-->
 			<div class="section-invite">
@@ -205,8 +364,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1678217843335"></script>
-		<script src="./js/main.js?v=1678217843335"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1678217843690"></script>
+		<script src="./js/main.js?v=1678217843690"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="vk">
 		<circle cx="25" cy="25" r="25" fill="currentColor"></circle>
 		<path fill-rule="evenodd" clip-rule="evenodd" d="M35.7203 20.1875C35.8872 19.6587 35.7203 19.2744 34.982 19.2744H32.5272C31.908 19.2744 31.622 19.6109 31.4552 19.9709C31.4552 19.9709 30.1923 23.0459 28.4289 25.0395C27.857 25.6161 27.595 25.8083 27.2852 25.8083C27.1183 25.8083 26.9036 25.6161 26.9036 25.0878V20.1627C26.9036 19.5383 26.7133 19.25 26.1887 19.25H22.3281C21.9466 19.25 21.7084 19.5383 21.7084 19.8266C21.7084 20.427 22.5902 20.5714 22.6853 22.2528V25.9062C22.6853 26.6989 22.5447 26.8438 22.2325 26.8438C21.3986 26.8438 19.3731 23.7448 18.1581 20.2137C17.9219 19.5144 17.6819 19.25 17.0622 19.25H14.5839C13.8691 19.25 13.75 19.5861 13.75 19.9466C13.75 20.5953 14.5839 23.862 17.6341 28.1858C19.6595 31.1389 22.5428 32.7261 25.1402 32.7261C26.7133 32.7261 26.9036 32.3656 26.9036 31.7652V29.5311C26.9036 28.8106 27.0466 28.6906 27.5472 28.6906C27.9044 28.6906 28.548 28.8823 30.0016 30.2998C31.6694 31.9813 31.9553 32.75 32.8848 32.75H35.3392C36.0541 32.75 36.3878 32.3895 36.197 31.693C35.9828 30.9964 35.1723 29.9877 34.1238 28.7867C33.5519 28.1145 32.6941 27.3697 32.432 27.0092C32.0748 26.5287 32.17 26.3366 32.432 25.9044C32.4081 25.9044 35.4109 21.6284 35.7203 20.1856" fill="white"></path>
