--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" href="favicons/favicon.ico">
 		<link rel="icon" href="favicons/favicon-16x16.png" sizes="16x16">
 		<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32">
-		<link rel="stylesheet" href="./css/main.css?v=1680039715591">
+		<link rel="stylesheet" href="./css/main.css?v=1680039942075">
 	</head>
 	<body>
 		<!-- Header-->
@@ -265,7 +265,7 @@
 								<li class="tabs__nav-elem">
 									<button class="tabs__nav-button" data-content="content2">Вебинары</button>
 								</li>
-							</ul><a class="button button--outline-blue button--sm" href="#">Все новости</a>
+							</ul><a class="button-arrow" href="#">Все новости</a>
 						</div>
 						<div class="tabs__content-box">
 							<!-- Content-->
@@ -425,8 +425,8 @@
 				</div>
 			</div>
 		</footer>
-		<script src="./js/vendor.js?v=1680039715591"></script>
-		<script src="./js/main.js?v=1680039715591"></script><svg width="0" height="0" class="hidden">
+		<script src="./js/vendor.js?v=1680039942075"></script>
+		<script src="./js/main.js?v=1680039942075"></script><svg width="0" height="0" class="hidden">
 	<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 22" id="play">
 		<path d="M18 11L0 21.3923V0.607696L18 11Z" fill="currentColor"></path>
 	</symbol>
